# automate-aws-resources-lambda

./: .gitignore  README.md  handler.py  package.json  pyproject.toml  serverless.yml
