[tool.poetry]
name = "ec2-control-function"
version = "0.1.0"
description = ""
authors = ["Marlon Baptista de Quadros <marlonbquadros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.64"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
